--- a/app/views/spree/workshops/_form.html.erb
+++ b/app/views/spree/workshops/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @workshop } %>
 <h1><%= t('.workshop') %></h1>
-<%= form_for(@workshop) , :url => workshops_path do |f| %>
+<%= form_for @workshop do |f| %>
   <p>
     <%= f.label t('.name') %>
     <span class="required">*</span><br/>
