--- a/app/views/spree/workshops/_towns.erb
+++ b/app/views/spree/workshops/_towns.erb
@@ -1,6 +1,6 @@
 <%= fields_for 'workshop' do |f| %>
   <% if towns.blank? %>
-    <%= f.collection_select :town_id, :collection => Spree::Town.all.collect{ |s| [s.name,s.id]}, :label => "Ciudad" %>
+    <%= f.collection_select :town_id, Spree::Town.all, :name, :id, :label => "Ciudad" %>
   <% else %>
     <%= f.collection_select :town_id, :collection => towns.collect{ |s| [s.name,s.id]}, :label => "Ciudad", :include_blank => false %>
   <% end %>
