--- a/app/views/spree/workshops/_form.html.erb
+++ b/app/views/spree/workshops/_form.html.erb
@@ -9,7 +9,7 @@
     <p>
       <%= f.label t('.address') %>
       <span class="required">*</span><br/>
-      <%= f.text_field :name %>
+      <%= f.text_field :address %>
     </p>
     <p>
       <%= f.label t('.province') %>
