--- a/app/views/spree/admin/workshops/index.html.erb
+++ b/app/views/spree/admin/workshops/index.html.erb
@@ -5,6 +5,8 @@
 <table class="index" id="workshops_listing">
   <thead data-hook="admin_workshops_index_headers">
     <th><%= t(:name) %></th>
+    <th><%= t(:address) %></th>
+    <th><%= t(:town) %></th>
     <th data-hook="admin_workshops_index_header_actions">
     </th>
   </thead>
