--- a/app/views/spree/admin/workshops/index.html.erb
+++ b/app/views/spree/admin/workshops/index.html.erb
@@ -4,11 +4,11 @@
 
 <table class="index" id="workshops_listing">
   <thead data-hook="admin_workshops_index_headers">
-    <th><%= t(:name) %></th>
-    <th><%= t(:address) %></th>
-    <th><%= t(:town) %></th>
-    <th><%= t(:price_for_car) %></th>
-    <th><%= t(:price_for_moto) %></th>
+    <th><%= t('spree.workshop.form.name') %></th>
+    <th><%= t('spree.workshop.form.address') %></th>
+    <th><%= t('spree.workshop.form.town') %></th>
+    <th><%= t('spree.workshop.form.price_for_car') %></th>
+    <th><%= t('spree.workshop.form.price_for_moto') %></th>
     <th data-hook="admin_workshops_index_header_actions">
     </th>
   </thead>
@@ -21,7 +21,6 @@
         <td width="60px"><%= number_to_currency(workshop.price_for_car) %></td>
         <td width="60px"><%= number_to_currency(workshop.price_for_moto) %></td>
         <td width="40px" data-hook="admin_workshops_index_row_actions">
-          <%= link_to_edit workshop %> &nbsp;
           <%= link_to_delete workshop %>
         </td>
       </tr>
