--- a/app/views/spree/admin/workshops/index.html.erb
+++ b/app/views/spree/admin/workshops/index.html.erb
@@ -4,11 +4,11 @@
 
 <table class="index" id="workshops_listing">
   <thead data-hook="admin_workshops_index_headers">
-    <th><%= t('spree.workshop.form.name') %></th>
-    <th><%= t('spree.workshop.form.address') %></th>
-    <th><%= t('spree.workshop.form.town') %></th>
-    <th><%= t('spree.workshop.form.price_for_car') %></th>
-    <th><%= t('spree.workshop.form.price_for_moto') %></th>
+    <th><%= t('spree.workshops.form.name') %></th>
+    <th><%= t('spree.workshops.form.address') %></th>
+    <th><%= t('spree.workshops.form.town') %></th>
+    <th><%= t('spree.workshops.form.price_for_car') %></th>
+    <th><%= t('spree.workshops.form.price_for_moto') %></th>
     <th data-hook="admin_workshops_index_header_actions">
     </th>
   </thead>
