--- a/app/views/spree/workshops/_form.html.erb
+++ b/app/views/spree/workshops/_form.html.erb
@@ -18,6 +18,7 @@
     </p>
     <p>
       <%= f.label t('.town') %>
+      <span class="required">*</span><br/>
       <div id="workshopTowns">
         <%= render :partial => 'towns' %>
       </div>
