--- a/app/views/spree/workshops/_form.html.erb
+++ b/app/views/spree/workshops/_form.html.erb
@@ -31,15 +31,15 @@
       <%= f.text_field :phone %>
     </p>
     <p>
-      <%= f.label t('.fax') %>
+      <%= f.label t('.fax') %><br/>
       <%= f.text_field :fax %>
     </p>
     <p>
-      <%= f.label t('.email') %>
+      <%= f.label t('.email') %><br/>
       <%= f.text_field :email %>
     </p>
     <p>
-      <%= f.label t('.notes') %>
+      <%= f.label t('.notes') %><br/>
       <%= f.text_field :notes %>
     </p>
     <p>
