--- a/app/views/spree/workshops/_list_workshops.html.erb
+++ b/app/views/spree/workshops/_list_workshops.html.erb
@@ -1,5 +1,5 @@
-<% if list_workshops.blank? -%>
-  <h3>No tenemos talleres concertados en esta provincia </h3>
+<% if message.blank? -%>
+  <h3><%= message %></h3>
 <% else -%>
   <table>
     <tr>
