New Workshop search

--- a/app/views/spree/workshops/_list_workshops.html.erb
+++ b/app/views/spree/workshops/_list_workshops.html.erb
@@ -2,11 +2,11 @@
   <% if @message.blank? -%>
     <table>
       <tr>
-        <th><%= t('spree.workshops.form.name') %></th>
-        <th><%= t('spree.workshops.form.address') %></th>
-        <th><%= t('spree.workshops.form.town') %></th>
-        <th><%= t('spree.workshops.form.price_for_car') %></th>
-        <th><%= t('spree.workshops.form.price_for_moto') %></th>
+        <th width="70px"><%= t('spree.workshops.form.name') %></th>
+        <th width="70px"><%= t('spree.workshops.form.address') %></th>
+        <th width="70px"><%= t('spree.workshops.form.town') %></th>
+        <th width="70px"><%= t('spree.workshops.form.price_for_car') %></th>
+        <th width="70px"><%= t('spree.workshops.form.price_for_moto') %></th>
       </tr>
 
       <% list_workshops.each do |workshop| %>
