--- a/app/views/spree/workshops/search.html.erb
+++ b/app/views/spree/workshops/search.html.erb
@@ -1,6 +1,6 @@
 <h1>Buscando Taller</h1>
 <br />
-<%= form_tag search_workshop_path, :method => 'get', :remote => true do %>
+<%= form_tag search_workshops_path, :method => 'get', :remote => true do %>
   <%= select_tag "Provincia", options_from_collection_for_select(@states, "id", "name") %>
   <%= submit_tag "Buscar" %>
 <% end -%>
