New Workshop search

--- a/app/views/spree/workshops/_list_workshops.html.erb
+++ b/app/views/spree/workshops/_list_workshops.html.erb
@@ -1,9 +1,7 @@
-<% list_workshops.each do |workshop| %>
-  <tr>
-    <td width="170px"><%= workshop.name %></td>
-    <td width="170px"><%= workshop.address %></td>
-    <td width="170px"><%= workshop.town.name %>(<%= workshop.town.state.name %>)</td>
-    <td width="170px"><%= number_to_currency(workshop.price_for_car) %></td>
-    <td width="170px"><%= number_to_currency(workshop.price_for_moto) %></td>
-  </tr>
-<% end %>
+<tr>
+  <td width="170px"><%= list_workshops.name %></td>
+  <td width="170px"><%= list_workshops.address %></td>
+  <td width="170px"><%= list_workshops.town.name %>(<%= list_workshops.town.state.name %>)</td>
+  <td width="170px"><%= number_to_currency(list_workshops.price_for_car) %></td>
+  <td width="170px"><%= number_to_currency(list_workshops.price_for_moto) %></td>
+</tr>
