--- a/app/views/spree/workshops/search.js.erb
+++ b/app/views/spree/workshops/search.js.erb
@@ -1,2 +1,2 @@
-$('#list').html('<%= escape_javascript render(@list_workshops) %>');
-$('#paginator').html('<%= escape_javascript(paginate(@list_workshops, :remote => true).to_s) %>');
+$('#list').html('<%= escape_javascript render(@workshops) %>');
+$('#paginator').html('<%= escape_javascript(paginate(@workshops, :remote => true).to_s) %>');
