--- a/app/views/spree/workshops/_workshop.html.erb
+++ b/app/views/spree/workshops/_workshop.html.erb
@@ -1,7 +1,7 @@
 <tr>
-  <td width="170px"><%= workshop.name %></td>
-  <td width="170px"><%= workshop.address %></td>
-  <td width="170px"><%= workshop.town.name %>(<%= workshop.town.state.name %>)</td>
-  <td width="170px"><%= number_to_currency(workshop.price_for_car) %></td>
-  <td width="170px"><%= number_to_currency(workshop.price_for_moto) %></td>
+  <td><%= workshop.name %></td>
+  <td><%= workshop.address %></td>
+  <td><%= workshop.town.name %>(<%= workshop.town.state.name %>)</td>
+  <td><%= number_to_currency(workshop.price_for_car) %></td>
+  <td><%= number_to_currency(workshop.price_for_moto) %></td>
 </tr>
