--- a/app/views/spree/workshops/index.html.erb
+++ b/app/views/spree/workshops/index.html.erb
@@ -9,11 +9,11 @@
 <br /><br /><br />
 <table>
   <tr>
-    <th width="170px"><%= t('spree.workshops.form.name') %></th>
-    <th width="170px"><%= t('spree.workshops.form.address') %></th>
-    <th width="170px"><%= t('spree.workshops.form.town') %></th>
-    <th width="170px"><%= t('spree.workshops.form.price_for_car') %></th>
-    <th width="170px"><%= t('spree.workshops.form.price_for_moto') %></th>
+    <th><%= t('spree.workshops.form.name') %></th>
+    <th><%= t('spree.workshops.form.address') %></th>
+    <th><%= t('spree.workshops.form.town') %></th>
+    <th><%= t('spree.workshops.form.price_for_car') %></th>
+    <th><%= t('spree.workshops.form.price_for_moto') %></th>
   </tr>
   <tbody id="list">
     <%= render :partial => @workshops %>
