--- a/app/views/spree/workshops/index.html.erb
+++ b/app/views/spree/workshops/index.html.erb
@@ -5,20 +5,21 @@
   <%= submit_tag "Buscar" %>
 <% end -%>
 
-
 <br /><br /><br />
-<table>
-  <tr>
-    <th><%= t('spree.workshops.form.name') %></th>
-    <th><%= t('spree.workshops.form.address') %></th>
-    <th><%= t('spree.workshops.form.town') %></th>
-    <th><%= t('spree.workshops.form.price_for_car') %></th>
-    <th><%= t('spree.workshops.form.price_for_moto') %></th>
-  </tr>
-  <tbody id="list">
-    <%= render :partial => @workshops %>
-  </tbody>
-</table>
-<div id="paginator" class="pagination">
-  <%= paginate @workshops, :remote => true %>
-</div>
+<% unless @workshops.empty -%>
+  <table>
+    <tr>
+      <th><%= t('spree.workshops.form.name') %></th>
+      <th><%= t('spree.workshops.form.address') %></th>
+      <th><%= t('spree.workshops.form.town') %></th>
+      <th><%= t('spree.workshops.form.price_for_car') %></th>
+      <th><%= t('spree.workshops.form.price_for_moto') %></th>
+    </tr>
+    <tbody id="list">
+      <%= render :partial => @workshops %>
+    </tbody>
+  </table>
+  <div id="paginator" class="pagination">
+    <%= paginate @workshops, :remote => true %>
+  </div>
+<% end -%>
