New Workshop search

--- a/app/views/spree/workshops/index.html.erb
+++ b/app/views/spree/workshops/index.html.erb
@@ -6,7 +6,7 @@
 <% end -%>
 
 <br /><br /><br />
-<% unless @workshops.empty -%>
+<% unless @workshops.empty? -%>
   <table>
     <tr>
       <th><%= t('spree.workshops.form.name') %></th>
