--- a/app/views/spree/workshops/index.html.erb
+++ b/app/views/spree/workshops/index.html.erb
@@ -7,7 +7,7 @@
 
 <br /><br /><br />
   <% unless @workshops.empty? -%>
-    <table class="index">
+    <table class="table table-striped">
       <tr>
         <th><%= t('spree.workshops.form.name') %></th>
         <th><%= t('spree.workshops.form.address') %></th>
