--- a/app/views/spree/workshops/index.html.erb
+++ b/app/views/spree/workshops/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Buscando Taller</h1>
 <br />
 <%= form_tag search_workshops_path, :method => 'get', :remote => true do %>
-  <%= select_tag "Provincia", options_from_collection_for_select(@states, "id", "name") %>
+  <%= select_tag "Provincia", options_from_collection_for_select([[0, "Todas"]] + @states, "id", "name") %>
   <%= submit_tag "Buscar", :class => "btn btn-primary" %>
 <% end -%>
 
